--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage": "https://c0dingpanda.github.io/ReactPortfolio",
+  "homepage": "https://c0dingpanda.github.io",
   "name": "personal-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "main -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
